text-align fix

--- a/styles/general.less
+++ b/styles/general.less
@@ -243,6 +243,10 @@ ul {
 					color: #535353;
 					letter-spacing: 1px;
 					border-bottom:1px solid #f2f2f2;
+
+					&:not(.heading){
+						text-align: left;
+					}
 					&:last-child {
 						border-bottom: 0;
 					}
@@ -259,7 +263,6 @@ ul {
 			&.coiffeurs {
 				li:not(.heading){
 		  			line-height: 1.2em;
-					text-align: left;
 					padding: 9px 0;
 
 		  			a {display: inline-block;}
